--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,5 +10,11 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Build docker image
-        run: docker build .
+        uses: docker/build-push-action@v2
+        with:
+          context: app
+          cache-from: type=gha,scope=app
+          cache-to: type=gha,mode=max,scope=app
