--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Build docker image
         uses: docker/build-push-action@v2
         with:
-          context: app
+          context: .
           cache-from: type=gha,scope=app
           cache-to: type=gha,mode=max,scope=app
